# dbami

./: .env  .pre-commit-config.yaml  .snyk  CHANGELOG.md  CONTRIBUTING.md  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml  snyk-scan.yml
src/dbami/: __main__.py  cli.py  constants.py  db.py  exceptions.py  pg_dump.py  util.py
src/dbami/helpers/: apply_migrations.py  helper.py
tests/: conftest.py  test_cleanup.py  test_cli.py  test_db.py  test_find_next_migration.py  test_migration.py  test_pg_dump.py  test_sqlfile.py
tests/helpers/: conftest.py  test_migration_helper.py
